[gd_scene load_steps=8 format=2]

[ext_resource path="res://Improved Game/Style/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Main Menu/tennis_logo.png" type="Texture" id=2]
[ext_resource path="res://Main Menu/instruction_logo.png" type="Texture" id=3]
[ext_resource path="res://Main Menu/classic_logo.png" type="Texture" id=4]
[ext_resource path="res://Main Menu/Main_menu.gd" type="Script" id=5]
[ext_resource path="res://Improved Game/Style/theme.tres" type="Theme" id=6]
[ext_resource path="res://Main Menu/main_bg.png" type="Texture" id=7]

[node name="Title Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 520, 380 )
scale = Vector2( 2.11382, 2.05962 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -212.0
margin_top = 87.0
margin_right = 212.0
margin_bottom = 237.0
theme = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "[center]BREAKOUT[/center]"
text = "BREAKOUT"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ClassicButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -71.0
margin_right = 176.0
margin_bottom = -13.0
theme = ExtResource( 1 )
text = " Classic"
icon = ExtResource( 4 )
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ImprovedButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.0
margin_top = 27.0
margin_right = 196.0
margin_bottom = 85.0
theme = ExtResource( 1 )
text = " Improved"
icon = ExtResource( 2 )
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InstructionButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -279.5
margin_top = 122.0
margin_right = 279.5
margin_bottom = 180.0
theme = ExtResource( 1 )
text = " Instructions"
icon = ExtResource( 3 )
align = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ClassicButton" to="." method="_on_ClassicButton_pressed"]
[connection signal="pressed" from="ImprovedButton" to="." method="_on_ImprovedButton_pressed"]
[connection signal="pressed" from="InstructionButton" to="." method="_on_InstructionButton_pressed"]
